--- a/package.json
+++ b/package.json
@@ -10,18 +10,22 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "multer": "^1.4.5-lts.1"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/node": "^16.18.126",
+    "@types/winston": "^2.4.4",
     "dotenv": "^16.4.7",
+    "pm2": "^5.4.3",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.5",
-    "pm2": "^5.4.3"
+    "typescript": "^4.9.5"
   }
 }
