--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,10 +26,12 @@ jobs:
             --include='package.json' \
             --include='package-lock.json' \
             --include='tsconfig.json' \
+            --include='ecosystem.config.cjs' \
             --exclude='*' \
             ./ ${{ secrets.VPS_USERNAME }}@${{ secrets.VPS_HOST }}:${{ secrets.VPS_DEPLOY_PATH }}
-      - name : Install dependencies
+
+      - name: Install dependencies
         run: ssh ${{ secrets.VPS_USERNAME }}@${{ secrets.VPS_HOST }} "cd ${{ secrets.VPS_DEPLOY_PATH }} && npm install"
 
-      - name: Update the pm2 process
-        run : ssh ${{ secrets.VPS_USERNAME }}@${{ secrets.VPS_HOST }} "cd ${{ secrets.VPS_DEPLOY_PATH }} && pm2 update "files-uploader""
+      - name: Start or reload PM2 process
+        run: ssh ${{ secrets.VPS_USERNAME }}@${{ secrets.VPS_HOST }} "cd ${{ secrets.VPS_DEPLOY_PATH }} && pm2 start ecosystem.config.cjs --update-env"
