--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "build": "tsc",
-    "start:dev": "pm2 start ecosystem.config.cjs --env development",
+    "start:dev": "pm2 start ecosystem.config.cjs --env development --interpreter $(which bun)",
     "start:prod": "pm2 start ecosystem.config.cjs --env production",
     "start": "npm run start:prod"
   },
