--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to VPS
 
 on:
   push:
-    branches: [ main, 5-create-production-pipeline ]
+    branches: [ main, master ]
   workflow_dispatch:
 
 jobs:
